--- a/com.automation.aws.testing/test-output/index.html
+++ b/com.automation.aws.testing/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\sh360659\AppData\Local\Temp\testng-eclipse-347332600\testng-customsuite.xml</span>
+                    <span>C:\Users\sh360659\AppData\Local\Temp\testng-eclipse--888139990\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -135,7 +135,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\sh360659\AppData\Local\Temp\testng-eclipse-347332600\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\sh360659\AppData\Local\Temp\testng-eclipse--888139990\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -188,12 +188,12 @@ data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'testCase1')
 data.setCell(0, 2, 'com.automation.aws.testing.test.Search_TC')
-data.setCell(0, 3, 7516);
+data.setCell(0, 3, 1073);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 7 seconds</span>
+              <span class="suite-total-time">Total running time: 1 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -220,25 +220,29 @@ return data;
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
               <div class="chronological-class-name">com.automation.aws.testing.test.Search_TC</div> <!-- chronological-class-name -->
+              <div class="configuration-suite before">
+                <span class="method-name">setupReport</span>
+                <span class="method-start">0 ms</span>
+              </div> <!-- configuration-suite before -->
               <div class="configuration-class before">
                 <span class="method-name">beforeClass</span>
-                <span class="method-start">0 ms</span>
+                <span class="method-start">553 ms</span>
               </div> <!-- configuration-class before -->
               <div class="configuration-method before">
                 <span class="method-name">setUp</span>
-                <span class="method-start">517 ms</span>
+                <span class="method-start">558 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">testCase1</span>
-                <span class="method-start">13322 ms</span>
+                <span class="method-start">18419 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
-                <span class="method-name">close</span>
-                <span class="method-start">20840 ms</span>
+                <span class="method-name">tearDown([TestResult name=testCase1 status=SUCCESS method=Search_TC.testCase1()[pri:0, instance:com.automatio...)</span>
+                <span class="method-start">19494 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-test after">
                 <span class="method-name">endTest</span>
-                <span class="method-start">23219 ms</span>
+                <span class="method-start">23410 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
