--- a/com.automation.aws.testing/test-output/old/Default suite/methods-alphabetical.html
+++ b/com.automation.aws.testing/test-output/old/Default suite/methods-alphabetical.html
@@ -1,14 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6a99b2">  <td>20/02/19 19:00:06</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Search_TC.beforeClass()[pri:0, instance:com.automation.aws.testing.test.Search_TC@2c8d66b2]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1789550256</td>   <td></td> </tr>
-<tr bgcolor="a069a6">  <td>20/02/19 19:00:26</td>   <td>20834</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Driver.close()[pri:0, instance:com.automation.aws.testing.test.Search_TC@2c8d66b2]">&lt;&lt;close</td> 
-<td>&nbsp;</td>  <td>main@1789550256</td>   <td></td> </tr>
-<tr bgcolor="6a99b2">  <td>20/02/19 19:00:29</td>   <td>23212</td> <td>&nbsp;</td><td title="&lt;&lt;Search_TC.endTest()[pri:0, instance:com.automation.aws.testing.test.Search_TC@2c8d66b2]">&lt;&lt;endTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1789550256</td>   <td></td> </tr>
-<tr bgcolor="a069a6">  <td>20/02/19 19:00:06</td>   <td>510</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Driver.setUp()[pri:0, instance:com.automation.aws.testing.test.Search_TC@2c8d66b2]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1789550256</td>   <td></td> </tr>
-<tr bgcolor="6a99b2">  <td>20/02/19 19:00:19</td>   <td>13315</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Search_TC.testCase1()[pri:0, instance:com.automation.aws.testing.test.Search_TC@2c8d66b2]">testCase1</td> 
-  <td>main@1789550256</td>   <td></td> </tr>
+<tr bgcolor="6a99b2">  <td>20/02/20 21:02:08</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Search_TC.beforeClass()[pri:0, instance:com.automation.aws.testing.test.Search_TC@5a39699c]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1873653341</td>   <td></td> </tr>
+<tr bgcolor="6a99b2">  <td>20/02/20 21:02:31</td>   <td>22857</td> <td>&nbsp;</td><td title="&lt;&lt;Search_TC.endTest()[pri:0, instance:com.automation.aws.testing.test.Search_TC@5a39699c]">&lt;&lt;endTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1873653341</td>   <td></td> </tr>
+<tr bgcolor="a069a6">  <td>20/02/20 21:02:08</td>   <td>6</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Driver.setUp()[pri:0, instance:com.automation.aws.testing.test.Search_TC@5a39699c]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1873653341</td>   <td></td> </tr>
+<tr bgcolor="a069a6">  <td>20/02/20 21:02:07</td>   <td>-546</td> <td title="&gt;&gt;Driver.setupReport()[pri:0, instance:com.automation.aws.testing.test.Search_TC@5a39699c]">&gt;&gt;setupReport</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1873653341</td>   <td></td> </tr>
+<tr bgcolor="6a99b2">  <td>20/02/20 21:02:27</td>   <td>18942</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Search_TC.tearDown(org.testng.ITestResult)[pri:0, instance:com.automation.aws.testing.test.Search_TC@5a39699c]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1873653341</td>   <td></td> </tr>
+<tr bgcolor="6a99b2">  <td>20/02/20 21:02:26</td>   <td>17866</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Search_TC.testCase1()[pri:0, instance:com.automation.aws.testing.test.Search_TC@5a39699c]">testCase1</td> 
+  <td>main@1873653341</td>   <td></td> </tr>
 </table>
