--- a/com.automation.aws.testing/test-output/old/Default suite/classes.html
+++ b/com.automation.aws.testing/test-output/old/Default suite/classes.html
@@ -4,36 +4,24 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.automation.aws.testing.test.Search_TC</td>
+<td>com.automation.aws.testing.test.ReadExcel</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>testCase1</td>
+<td>readExcel</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
 <tr>
-<td>&nbsp;</td>
-<td>beforeClass</td>
-<td>&nbsp;</td></tr>
-<tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
 <tr>
-<td>&nbsp;</td>
-<td>setUp</td>
-<td>&nbsp;</td></tr>
-<tr>
 <td align='center' colspan='3'>@AfterMethod</td>
 </tr>
-<tr>
-<td>&nbsp;</td>
-<td>tearDown</td>
-<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
