--- a/com.automation.aws.testing/test-output/old/Default suite/methods.html
+++ b/com.automation.aws.testing/test-output/old/Default suite/methods.html
@@ -1,16 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a069a6">  <td>20/02/21 17:17:56</td>   <td>0</td> <td title="&gt;&gt;Driver.setupReport()[pri:0, instance:com.automation.aws.testing.test.Search_TC@5a39699c]">&gt;&gt;setupReport</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1873653341</td>   <td></td> </tr>
-<tr bgcolor="6a99b2">  <td>20/02/21 17:17:57</td>   <td>836</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Search_TC.beforeClass()[pri:0, instance:com.automation.aws.testing.test.Search_TC@5a39699c]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1873653341</td>   <td></td> </tr>
-<tr bgcolor="a069a6">  <td>20/02/21 17:17:57</td>   <td>844</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Driver.setUp()[pri:0, instance:com.automation.aws.testing.test.Search_TC@5a39699c]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1873653341</td>   <td></td> </tr>
-<tr bgcolor="6a99b2">  <td>20/02/21 17:18:21</td>   <td>25182</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Search_TC.testCase1()[pri:0, instance:com.automation.aws.testing.test.Search_TC@5a39699c]">testCase1</td> 
-  <td>main@1873653341</td>   <td></td> </tr>
-<tr bgcolor="a069a6">  <td>20/02/21 17:18:28</td>   <td>32296</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Driver.tearDown(org.testng.ITestResult)[pri:0, instance:com.automation.aws.testing.test.Search_TC@5a39699c]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1873653341</td>   <td></td> </tr>
-<tr bgcolor="6a99b2">  <td>20/02/21 17:18:32</td>   <td>35824</td> <td>&nbsp;</td><td title="&lt;&lt;Search_TC.endTest()[pri:0, instance:com.automation.aws.testing.test.Search_TC@5a39699c]">&lt;&lt;endTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1873653341</td>   <td></td> </tr>
+<tr bgcolor="cbc48f">  <td>20/03/10 17:14:17</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ReadExcel.readExcel()[pri:0, instance:com.automation.aws.testing.test.ReadExcel@6debcae2]">readExcel</td> 
+  <td>main@1121172875</td>   <td></td> </tr>
 </table>
