Adding IFrame embedded youtube

--- a/com.automation.aws.testing/test-output/index.html
+++ b/com.automation.aws.testing/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\sh360659\AppData\Local\Temp\testng-eclipse--1346531318\testng-customsuite.xml</span>
+                    <span>C:\Users\sh360659\AppData\Local\Temp\testng-eclipse--429452517\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -102,7 +102,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.automation.aws.testing.test.ReadExcel" hash-for-method="readExcel">readExcel</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.automation.aws.testing.test.Handling_IFrame" hash-for-method="Handling_IFrame">Handling_IFrame</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -120,14 +120,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.automation.aws.testing.test.ReadExcel</span>
+              <span class="class-name">com.automation.aws.testing.test.Handling_IFrame</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="readExcel">
-                  </a> <!-- readExcel -->
-                  <span class="method-name">readExcel</span>
+                  <a name="Handling_IFrame">
+                  </a> <!-- Handling_IFrame -->
+                  <span class="method-name">Handling_IFrame</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -135,7 +135,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\sh360659\AppData\Local\Temp\testng-eclipse--1346531318\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\sh360659\AppData\Local\Temp\testng-eclipse--429452517\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -144,7 +144,7 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.automation.aws.testing.test.ReadExcel&quot;/&gt;
+      &lt;class name=&quot;com.automation.aws.testing.test.Handling_IFrame&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -186,14 +186,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'readExcel')
-data.setCell(0, 2, 'com.automation.aws.testing.test.ReadExcel')
-data.setCell(0, 3, 18);
+data.setCell(0, 1, 'Handling_IFrame')
+data.setCell(0, 2, 'com.automation.aws.testing.test.Handling_IFrame')
+data.setCell(0, 3, 8330);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 18 ms</span>
+              <span class="suite-total-time">Total running time: 8 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -219,10 +219,22 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.automation.aws.testing.test.ReadExcel</div> <!-- chronological-class-name -->
-              <div class="test-method">
-                <span class="method-name">readExcel</span>
+              <div class="chronological-class-name">com.automation.aws.testing.test.Handling_IFrame</div> <!-- chronological-class-name -->
+              <div class="configuration-suite before">
+                <span class="method-name">setupReport</span>
                 <span class="method-start">0 ms</span>
+              </div> <!-- configuration-suite before -->
+              <div class="configuration-test before">
+                <span class="method-name">setup</span>
+                <span class="method-start">487 ms</span>
+              </div> <!-- configuration-test before -->
+              <div class="configuration-method before">
+                <span class="method-name">setUp</span>
+                <span class="method-start">500 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">Handling_IFrame</span>
+                <span class="method-start">26188 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
