--- a/com.automation.aws.testing/test-output/old/Default suite/methods-alphabetical.html
+++ b/com.automation.aws.testing/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6ae17f">  <td>20/04/28 19:00:04</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FreeCRM_JavascriptExecutor.hradio_Btn()[pri:1, instance:com.automation.aws.testing.test.FreeCRM_JavascriptExecutor@589da3f3]">hradio_Btn</td> 
-  <td>main@731829978</td>   <td></td> </tr>
-<tr bgcolor="8ef7ed">  <td>20/04/28 18:59:49</td>   <td>-15456</td> <td>&nbsp;</td><td title="&gt;&gt;Driver.setUp()[pri:0, instance:com.automation.aws.testing.test.FreeCRM_JavascriptExecutor@589da3f3]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@731829978</td>   <td></td> </tr>
-<tr bgcolor="8ef7ed">  <td>20/04/28 19:00:49</td>   <td>44654</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Driver.tearDown(org.testng.ITestResult)[pri:0, instance:com.automation.aws.testing.test.FreeCRM_JavascriptExecutor@589da3f3]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@731829978</td>   <td></td> </tr>
+<tr bgcolor="f47664">  <td>20/05/18 16:09:20</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;Driver.setUp()[pri:0, instance:com.automation.aws.testing.test.Keyboard_Keys@404bbcbd]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1558103808</td>   <td></td> </tr>
+<tr bgcolor="f47664">  <td>20/05/18 16:09:41</td>   <td>21660</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Driver.tearDown(org.testng.ITestResult)[pri:0, instance:com.automation.aws.testing.test.Keyboard_Keys@404bbcbd]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1558103808</td>   <td></td> </tr>
+<tr bgcolor="d9cbf5">  <td>20/05/18 16:09:32</td>   <td>11986</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Keyboard_Keys.test()[pri:0, instance:com.automation.aws.testing.test.Keyboard_Keys@404bbcbd]">test</td> 
+  <td>main@1558103808</td>   <td></td> </tr>
 </table>
