--- a/com.automation.aws.testing/test-output/old/QA Automation/methods-alphabetical.html
+++ b/com.automation.aws.testing/test-output/old/QA Automation/methods-alphabetical.html
@@ -1,8 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>QA Automation</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9061ba">  <td>20/03/10 19:31:08</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ReadExcel.readExcel()[pri:0, instance:com.automation.aws.testing.test.ReadExcel@11531931]">readExcel</td> 
-  <td>main@1020923989</td>   <td></td> </tr>
-<tr bgcolor="a77081">  <td>20/03/10 19:31:07</td>   <td>-885</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="WriteExcel.writeExcel()[pri:0, instance:com.automation.aws.testing.test.WriteExcel@71c7db30]">writeExcel</td> 
-  <td>main@1020923989</td>   <td></td> </tr>
+<tr bgcolor="90af74">  <td>20/05/02 17:36:10</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;SpamCommentUtube.setUp()[pri:0, instance:com.automation.aws.testing.test.SpamCommentUtube@7bedc48a]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1491755116</td>   <td></td> </tr>
+<tr bgcolor="90af74">  <td>20/05/02 17:36:18</td>   <td>7556</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SpamCommentUtube.spamComment()[pri:0, instance:com.automation.aws.testing.test.SpamCommentUtube@7bedc48a]">spamComment</td> 
+  <td>pool-1-thread-1@275913969</td>   <td></td> </tr>
+<tr bgcolor="90af74">  <td>20/05/02 17:36:18</td>   <td>7556</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SpamCommentUtube.spamComment1()[pri:0, instance:com.automation.aws.testing.test.SpamCommentUtube@7bedc48a]">spamComment1</td> 
+  <td>pool-1-thread-2@118055475</td>   <td></td> </tr>
+<tr bgcolor="90af74">  <td>20/05/02 17:36:36</td>   <td>25734</td> <td>&nbsp;</td><td title="&lt;&lt;SpamCommentUtube.teardown()[pri:0, instance:com.automation.aws.testing.test.SpamCommentUtube@7bedc48a]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1491755116</td>   <td></td> </tr>
 </table>
