--- a/com.automation.aws.testing/test-output/old/Default suite/methods.html
+++ b/com.automation.aws.testing/test-output/old/Default suite/methods.html
@@ -1,10 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9bfa76">  <td>20/06/03 23:33:38</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;Driver.setUp()[pri:0, instance:com.automation.aws.testing.test.Handle_Image_TC@4d5650ae]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@783191662</td>   <td></td> </tr>
-<tr bgcolor="d7f8ca">  <td>20/06/03 23:33:45</td>   <td>6296</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Handle_Image_TC.brokenImage()[pri:0, instance:com.automation.aws.testing.test.Handle_Image_TC@4d5650ae]">brokenImage</td> 
-  <td>main@783191662</td>   <td></td> </tr>
-<tr bgcolor="9bfa76">  <td>20/06/03 23:33:50</td>   <td>11851</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Driver.tearDown(org.testng.ITestResult)[pri:0, instance:com.automation.aws.testing.test.Handle_Image_TC@4d5650ae]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@783191662</td>   <td></td> </tr>
+<tr bgcolor="aeb071">  <td>20/06/04 10:16:00</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;DropDownfb.setup()[pri:0, instance:com.automation.aws.testing.test.DropDownfb@576d5deb]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1855026648</td>   <td></td> </tr>
+<tr bgcolor="aeb071">  <td>20/06/04 10:16:00</td>   <td>85</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DropDownfb.dropDownFb()[pri:0, instance:com.automation.aws.testing.test.DropDownfb@576d5deb]">dropDownFb</td> 
+  <td>main@1855026648</td>   <td></td> </tr>
 </table>
